--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 const LIBRARY = [
   {
     id: "manga1",
-    title: "내 만화(임시)",
+    title: "옆자리 고양이와 순수남",
     desc: "로비 → 화수 선택 → 뷰어",
     // 현재 폴더가 루트에 27/29/30 으로 있으니 그대로 씀
     chapters: ["27", "29", "30"],
