--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     :root { color-scheme: dark; }
     body { margin:0; background:#0f0f10; color:#eaeaea; font-family: system-ui, -apple-system, Segoe UI, Roboto, sans-serif; }
     a, button { color: inherit; }
-    .wrap { max-width: 980px; margin: 0 auto; padding: 18px; }
+    .wrap { max-width: 100%; margin: 0 auto; padding: 10px; }
     .topbar { display:flex; align-items:center; gap:10px; position:sticky; top:0; background:rgba(15,15,16,.9); backdrop-filter: blur(8px); border-bottom:1px solid rgba(255,255,255,.08); padding: 12px 18px; z-index:10;}
     .brand { font-weight:700; letter-spacing:.3px; }
     .spacer { flex:1; }
@@ -26,7 +26,12 @@
     /* reader */
     #reader { padding: 0; }
     #gallery { padding: 12px 0 40px; }
-    #gallery img { max-width: 100%; display:block; margin: 0 auto 10px auto; }
+    #gallery img {
+      width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto 12px auto;
+    }
     .center { text-align:center; padding: 26px 0; }
     .hint { font-size: 13px; color: rgba(255,255,255,.6); }
     .seg { margin-top: 10px; display:flex; gap:10px; justify-content:center; flex-wrap:wrap; }
