--- a/index.html
+++ b/index.html
@@ -234,8 +234,8 @@ async function renderReader(manga, chapter){
         left.style.width = "200%";
         right.style.width = "200%";
       
-        left.style.transform = "translateX(0)";
-        right.style.transform = "translateX(-50%)";
+        left.style.transform = "translateX(-50%)";
+        right.style.transform = "translateX(0)";
       
         containerLeft.appendChild(left);
         containerRight.appendChild(right);
